Use unmodifiable list for path selector instead of linked list copy